--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+
+
 @-webkit-keyframes slideInDown {
   from {
     -webkit-transform: translate3d(0, -100%, 0);
@@ -58,20 +60,27 @@
 }
 
 .beardyModal{
+  -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+        box-sizing: border-box;
   position: fixed;
   top: 5%;
   right: 5%;
   display: block;
-  width: 200px;
-  height: 200px;
-  z-index: 1000;
-  background-color: #f9f9f9;
-  padding: 30px 25px;
-  color: #66625b;
+  width: 260px;
+  height: 250px;
+  z-index: 9000;
+  background-color:#f9f9de;
+  color: #3C3C3B;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
-  box-shadow: rgba(0, 0, 0, 0.5) 5px 5px 3px;
+  font-size: 14px;
+  line-height: 1.2;
+  -webkit-box-shadow: 4px 9px 46px -11px rgba(0,0,0,0.75);
+  -moz-box-shadow: 4px 9px 46px -11px rgba(0,0,0,0.75);
+  box-shadow: 4px 9px 46px -11px rgba(0,0,0,0.75);
   -webkit-animation-name: slideInDown;
   animation-name: slideInDown;
+  text-align: left;
 }
 
 .beardyModal--hide{
@@ -79,52 +88,113 @@
   animation-name: slideOutUp;
 }
 
-.beardyModal--dismiss-btn{
+/*Header ------------------------------------*/
+.beardyModal--header{
+  font-family: inherit;
+  font-size: inherit;
+  background-color: #3C3C3B;
+  color: #fff;
+  height: 50px;
+}
+
+.beardyModal--title{
+  font-family: inherit;
+  color: inherit;
+  font-size: 1.7rem;
+  font-style: normal    !important;
+  background-color: transparent    !important;
+  font-weight: bold;
+  display: inline-block;
   float: right;
+  line-height: 0.6;
+  padding-right: 17px;
+  margin: 18px 0;
+}
+
+.beardyModal--pictureWrapper{
+  position: relative;
+  display: inline-block;
+  height: 50px;
+  width: 52px;
+  margin-left: 15px;
+  background-color: #fff;
+}
+
+.beardyModal--arrow{
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 25px 26px 0 26px;
+  border-color: #ffffff transparent transparent transparent;
+  position: relative;
+  left: 15px;
+  top: 24px;
+}
+
+.beardyModal--picture{
+  width: 40px;
+  margin: 8px 6px;
+}
+
+/*Content ------------------------------------*/
+.beardyModal--content{
+  text-align: center;
+  font-family: inherit;
+  padding: 20px 20px;
+}
+
+.beardyModal--content p{
+  font-family: inherit;
+  margin: 5px 0px;
+  padding: 0;
+  line-height: 1.2;
+}
+.beardyModal--strong-paragraph{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+/*Footer ------------------------------------*/
+.beardyModal--footer{
+  font-family: inherit;
+  font-size: 14px;
+  padding: 4px 20px 20px;
+}
+.beardyModal--button{
+    -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+        box-sizing: border-box;
+  font-family: inherit;
+  background-color: #3C3C3B !important;
+  color: #fff !important;
+  text-decoration: none !important;
+  padding: 8px 12px !important;
+  margin: 0 auto !important;
+  display: inline-block !important;
+  width: 124px !important;
+  text-align: center !important;
+  font-weight: bold;
+  margin-left: 15px;
+  float: right;
+}
+
+.beardyModal--button:hover{
+  background-color: #2d2d2c !important;
+  color: #fff;
+  text-decoration: none:;
+}
+.beardyModal--dismiss-btn{
+  font-family: inherit;
+  font-size: 13px;
+  float: left;
   cursor: pointer;
   background: 0 0;
   border: 0;
-  font-weight: 700;
-  position: relative;
-  top: -15px;
-  right: -10px;
-  font-size: 14px;
-  color:  #66625b;
+  color:  #b2b297;
+  padding: 8px 12px !important;
+  text-transform: uppercase;
 }
 
 .beardyModal--dismiss-btn:hover{
     color:  #59554f;
   }
-
-.beardyModal--title{
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-.beardyModal--paragraph{
-  margin-bottom: 20px;
-}
-.beardyModal--picture{
-  float: left;
-  width: 80px;
-  margin-right: 15px;
-}
-
-.beardyModal--button{
-  background-color: #66625b;
-  color: #f9f9f9;
-  text-decoration: none;
-  padding: 6px 12px;
-  margin: 0 auto;
-  display: block;
-  width: 85px;
-  text-align: center;
-}
-
-.beardyModal--button:hover{
-  background-color: #59554f;
-  color: #f9f9f9;
-  text-decoration: none
-}
