--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@
 .beardyModal--title{
   font-family: inherit;
   color: inherit;
-  font-size: 1.7rem;
+  font-size: 28px;
   font-style: normal    !important;
   background-color: transparent    !important;
   font-weight: bold;
